# Folder-Mover-Pro-Safe-Windows-File-Migration

./: .gitignore  BUILD.md  LICENSE.txt  README-QuickStart.txt  README.md  RELEASE_NOTES_v1.0.4.md  RUNBOOK.md  START_HERE.md  demo_cases.xlsx  pyproject.toml  release_notes_template.md
docs/: CLIENT_HANDOFF.md  RELEASE_CHECKLIST.md
examples/: sample_report.csv
scripts/: Check-Version.ps1  Cleanup-Duplicates.ps1  Make-Icon.ps1  Run-FolderMoverPro.ps1  Run-FromSource.ps1  Show-Version.ps1
src/folder_mover/: __init__.py  cli.py  gui.py  gui_app.py  indexer.py  mover.py  report.py  types.py
tests/: test_indexer.py  test_mover.py  test_report.py
upwork_artifacts/: README.md
